--- a/DataMigration/.vscode/settings.json
+++ b/DataMigration/.vscode/settings.json
@@ -2,6 +2,11 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "c:\\Users\\Remiliano\\Documents\\libraries\\java\\commons-collections4-4.5.0-M3.jar",
+        "c:\\Users\\Remiliano\\Documents\\libraries\\java\\poi-5.4.0.jar",
+        "c:\\Users\\Remiliano\\Documents\\libraries\\java\\poi-ooxml-full-5.4.0.jar",
+        "c:\\Users\\Remiliano\\Documents\\libraries\\java\\poi-ooxml-schemas-4.1.2.jar",
+        "c:\\Users\\Remiliano\\Documents\\libraries\\java\\xmlbeans-5.3.0.jar"
     ]
 }
